--- a/App/RepresentApp/mobile/src/main/res/layout/content_main.xml
+++ b/App/RepresentApp/mobile/src/main/res/layout/content_main.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GO"
-        android:id="@+id/button"
+        android:id="@+id/goButton"
         android:layout_alignTop="@+id/editText"
         android:onClick = "goButton"
         android:textColor="#F2F2F2"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CURRENT LOCATION"
-        android:id="@+id/button2"
+        android:id="@+id/currentButton"
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
         android:layout_marginTop="51dp"
