--- a/App/RepresentApp/mobile/src/main/res/layout/members_item.xml
+++ b/App/RepresentApp/mobile/src/main/res/layout/members_item.xml
@@ -16,6 +16,8 @@
         android:layout_alignBottom="@+id/textView7"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_alignParentStart="false" />
 
     <TextView
@@ -25,6 +27,8 @@
         android:text="Name"
         android:textColor="#F2F2F2"
         android:id="@+id/textView3"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView4" />
 
@@ -35,8 +39,10 @@
         android:text="Party"
         android:textColor="#BDBDBD"
         android:id="@+id/textView4"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+        android:layout_toEndOf="@+id/imageView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,6 +61,8 @@
         android:text="Link"
         android:id="@+id/textView6"
         android:textColor="#BDBDBD"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_below="@+id/textView5"
         android:layout_alignStart="@+id/textView5" />
 
@@ -65,20 +73,24 @@
         android:text="lastTweet"
         android:id="@+id/textView7"
         android:textColor="#BDBDBD"
+
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_below="@+id/textView6"
         android:layout_alignStart="@+id/textView6" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:maxHeight="35dp"
-        android:maxWidth="35dp"
-        android:src = "@drawable/arrows"
-        android:background="#4A6385"
-        android:adjustViewBounds="true"
-        android:layout_alignTop="@+id/textView5"
-        android:onClick="detailButton"
-        android:layout_alignParentEnd="true" />
+    <!--<ImageButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/imageButton"-->
+        <!--android:maxHeight="35dp"-->
+        <!--android:maxWidth="35dp"-->
+        <!--android:src = "@drawable/arrows"-->
+        <!--android:background="#4A6385"-->
+        <!--android:focusable="false"-->
+        <!--android:focusableInTouchMode="false"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:layout_alignTop="@+id/textView5"-->
+        <!--android:layout_alignParentEnd="true" />-->
 
 </RelativeLayout>
