--- a/App/RepresentApp/wear/src/main/res/layout/round_activity_presidential_vote.xml
+++ b/App/RepresentApp/wear/src/main/res/layout/round_activity_presidential_vote.xml
@@ -19,7 +19,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CALIFORNIA"
+        android:text="STATE"
         android:layout_below="@+id/text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp" />
@@ -28,9 +28,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ALAMEDA COUNTY"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/textView3"
+        android:text="COUNTY"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -38,8 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OBAMA"
-        android:layout_below="@+id/textView4"
-        android:layout_alignStart="@+id/textView4" />
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignStart="@+id/text" />
 
     <TextView
         android:id="@+id/textView6"
@@ -53,7 +53,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="78.7%"
+        android:text="%"
         android:layout_below="@+id/textView4"
         android:layout_alignEnd="@+id/text" />
 
@@ -61,8 +61,8 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="18.4%"
-        android:layout_alignTop="@+id/textView6"
+        android:text="%"
+        android:layout_above="@+id/imageView"
         android:layout_alignStart="@+id/textView7" />
 
     <ImageView
