--- a/App/RepresentApp/mobile/src/main/res/layout/content_display_message.xml
+++ b/App/RepresentApp/mobile/src/main/res/layout/content_display_message.xml
@@ -8,13 +8,26 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#4A6385"
+    android:background="#FFFFFF"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.yhwinnie.representapp.DisplayMessageActivity"
     tools:showIn="@layout/activity_display_message">
 
+    <com.twitter.sdk.android.core.identity.TwitterLoginButton
+        android:id="@+id/twitter_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignStart="@+id/textView7" />
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView" />
+        android:id="@+id/listView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/twitter_login_button"
+        android:layout_marginTop="59dp" />
+
+
 </RelativeLayout>
