--- a/App/RepresentApp/mobile/src/main/res/layout/content_main.xml
+++ b/App/RepresentApp/mobile/src/main/res/layout/content_main.xml
@@ -8,33 +8,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#4A6385"
+    android:background="#FFFFFF"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.yhwinnie.representapp.MainActivity"
 
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="REPRESENT!"
-        android:id="@+id/textView"
-        android:textColor="#F2F2F2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
         android:layout_marginTop="112dp"
-        android:textColor="#F2F2F2"
+        android:textColor="#191919"
         android:clickable="false"
         android:hint="Enter Zip Code"
-        android:layout_toStartOf="@+id/button" />
+        android:backgroundTint="#191919"
+
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/goButton"
+        android:layout_above="@+id/textView2" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -45,8 +37,9 @@
         android:layout_alignTop="@+id/editText"
         android:onClick = "goButton"
         android:textColor="#F2F2F2"
-        android:background="#ED3838"
-        android:layout_alignParentEnd="true" />
+        android:background="#3C2032"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/editText" />
 
     <Button
         android:layout_width="wrap_content"
@@ -56,7 +49,7 @@
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
         android:layout_marginTop="51dp"
-        android:background="#ED3838"
+        android:background="#3C2032"
         android:onClick="currentLocationButton"
         android:textColor="#F2F2F2"
         android:layout_alignParentEnd="true" />
@@ -66,9 +59,24 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="OR"
-        android:textColor="#F2F2F2"
+        android:textColor="#000000"
         android:id="@+id/textView2"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerInParent="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:layout_above="@+id/editText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:src="@drawable/represent"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/editText" />
 
 </RelativeLayout>
