--- a/App/RepresentApp/mobile/src/main/res/layout/members_item.xml
+++ b/App/RepresentApp/mobile/src/main/res/layout/members_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
     android:weightSum="1">
 
     <ImageView
@@ -13,44 +14,48 @@
         android:src = "@drawable/diannefeinstein"
         android:largeHeap="true"
         android:adjustViewBounds="true"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:layout_alignParentStart="false" />
+        android:layout_alignTop="@+id/textView4"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Name"
-        android:textColor="#F2F2F2"
+        android:textColor="#000000"
         android:id="@+id/textView3"
+        android:textSize="15sp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView4" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Party"
+        android:textSize="12sp"
         android:textColor="#BDBDBD"
         android:id="@+id/textView4"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_below="@+id/textView3"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/imageView"
+        android:layout_marginStart="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Email"
+        android:textSize="12sp"
         android:id="@+id/textView5"
         android:textColor="#BDBDBD"
+        android:autoText="true"
+        android:autoLink="email"
         android:layout_below="@+id/textView4"
         android:layout_alignStart="@+id/textView4" />
 
@@ -59,10 +64,13 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Link"
+        android:textSize="12sp"
         android:id="@+id/textView6"
         android:textColor="#BDBDBD"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:autoLink="web"
+        android:autoText="true"
         android:layout_below="@+id/textView5"
         android:layout_alignStart="@+id/textView5" />
 
@@ -70,8 +78,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="lastTweet"
+        android:text="LOGIN IN TO SHOW LATEST TWEET"
         android:id="@+id/textView7"
+        android:textSize="12sp"
         android:textColor="#BDBDBD"
 
         android:focusable="false"
@@ -79,18 +88,22 @@
         android:layout_below="@+id/textView6"
         android:layout_alignStart="@+id/textView6" />
 
-    <!--<ImageButton-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/imageButton"-->
-        <!--android:maxHeight="35dp"-->
-        <!--android:maxWidth="35dp"-->
-        <!--android:src = "@drawable/arrows"-->
-        <!--android:background="#4A6385"-->
-        <!--android:focusable="false"-->
-        <!--android:focusableInTouchMode="false"-->
-        <!--android:adjustViewBounds="true"-->
-        <!--android:layout_alignTop="@+id/textView5"-->
-        <!--android:layout_alignParentEnd="true" />-->
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:maxHeight="35dp"
+        android:maxWidth="35dp"
+        android:src = "@drawable/arrows"
+        android:background="#FFFFFF"
+        android:adjustViewBounds="true"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_alignParentEnd="true" />
+
+
+
 
 </RelativeLayout>
