--- a/App/RepresentApp/wear/src/main/res/layout/activity_main.xml
+++ b/App/RepresentApp/wear/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.yhwinnie.representapp.Main2Activity"
+    tools:context="com.example.yhwinnie.representapp.MainActivity"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:clickable="true"
@@ -34,7 +34,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp" />
 
-    <ImageView
+    <android.support.v4.widget.CircleImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView3"
