--- a/App/RepresentApp/wear/src/main/res/layout/activity_main.xml
+++ b/App/RepresentApp/wear/src/main/res/layout/activity_main.xml
@@ -34,13 +34,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp" />
 
-    <android.support.v4.widget.CircleImageView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView3"
         android:src = "@drawable/pelosi"
         android:layout_above="@+id/textView9"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
